tests/negative/parser/unrecognized_builtin.orng
// unrecognized_builtin.orng:6:18: error: unknown built-in function
//     let x = @lmao(4)
//                 ^
// 
fn main() -> Int {
    let x = @lmao(4)
    x
}